tests/success/typechecking/Unification.vix
test = (\x y. x) 610
