tests/type-error/cycle-detection/top-level/MutualLambda.vix
f : Int
f = (\x. g) 1

g : Int
g = (\x. f) 1
